# serious-meta-library

./: CMakeLists.txt  README.md
cmake/: apply_generated.in  generate_meta_apply.cmake  generate_tie_as_tuple.cmake  tie_as_tuple_generated.in
dependencies/: CMakeLists.txt
fixture/: CMakeLists.txt
fixture/include/sl/meta/: fixture.hpp
fixture/include/sl/meta/fixture/: lifecycle.hpp
fixture/src/: lifecycle.cpp
include/sl/: meta.hpp
include/sl/meta/: assert.hpp  conn.hpp  enum.hpp  field.hpp  func.hpp  hash.hpp  intrusive.hpp  lifetime.hpp  match.hpp  memory.hpp  monad.hpp  optional.hpp  storage.hpp  string.hpp  traits.hpp  tuple.hpp  type.hpp
include/sl/meta/conn/: dirty.hpp  property.hpp  reactive.hpp  scoped_conn.hpp  signal.hpp  slot.hpp
include/sl/meta/enum/: flag.hpp  from_string.hpp  to_string.hpp
include/sl/meta/field/: alignment.hpp
include/sl/meta/func/: const.hpp  function.hpp  identity.hpp  lazy_eval.hpp  lift.hpp  pipeline.hpp  undefined.hpp
include/sl/meta/hash/: fnv1a.hpp  string_view.hpp
include/sl/meta/intrusive/: algorithm.hpp  forward_list.hpp  list.hpp
include/sl/meta/lifetime/: defer.hpp  deref.hpp  finalizer.hpp  forward_deref.hpp  immovable.hpp  lazy_eval.hpp  storage.hpp  unique.hpp
include/sl/meta/match/: bimatch.hpp  bimatch_map.hpp  match.hpp  match_map.hpp  overloaded.hpp  pmatch.hpp
include/sl/meta/memory/: aggregate.hpp  aligned.hpp  allocator.hpp  small_vector.hpp
include/sl/meta/monad/: algo.hpp  combine.hpp  errno.hpp  maybe.hpp  option.hpp  result.hpp
include/sl/meta/optional/: combine.hpp
include/sl/meta/storage/: persistent.hpp  persistent_array.hpp  unique_string.hpp  unique_string_convenience.hpp
include/sl/meta/string/: hash_string_view.hpp  hash_view.hpp  static.hpp
include/sl/meta/traits/: concept.hpp  constructible.hpp  count_fields.hpp  invocable.hpp  is_mapping.hpp  is_range.hpp  is_specialization.hpp  traits.hpp  treat_as.hpp  unique.hpp
include/sl/meta/tuple/: apply.hpp  construct_from_tuple.hpp  decay.hpp  enumerate.hpp  for_each.hpp  for_each_enumerate.hpp  for_each_meta_enumerate.hpp  for_each_type.hpp  tie_as_tuple.hpp  tuple.hpp
include/sl/meta/type/: const.hpp  identity.hpp  lazy.hpp  list.hpp  pack.hpp  undefined.hpp  unit.hpp
test/: CMakeLists.txt
test/include/fixture/: lifecycle.hpp
test/src/: conn_test.cpp  enum_test.cpp  field_test.cpp  func_test.cpp  hash_test.cpp  intrusive_test.cpp  lifecycle.cpp  lifetime_test.cpp  match_test.cpp  memory_test.cpp  meta_test.cpp  monad_test.cpp  storage_test.cpp  string_test.cpp  traits_test.cpp  tuple_test.cpp  type_test.cpp
