sl_gtest_prologue(v1.13.0)

add_library(${PROJECT_NAME}_fixture STATIC src/lifecycle.cpp)
target_include_directories(${PROJECT_NAME}_fixture PUBLIC include)
target_link_libraries(${PROJECT_NAME}_fixture PUBLIC ${PROJECT_NAME})

sl_add_gtest(${PROJECT_NAME}_fixture meta)
sl_add_gtest(${PROJECT_NAME}_fixture string)
sl_add_gtest(${PROJECT_NAME}_fixture traits)
sl_add_gtest(${PROJECT_NAME}_fixture tuple)
sl_add_gtest(${PROJECT_NAME}_fixture hash)
sl_add_gtest(${PROJECT_NAME}_fixture lifetime)
sl_add_gtest(${PROJECT_NAME}_fixture field)
sl_add_gtest(${PROJECT_NAME}_fixture match)
sl_add_gtest(${PROJECT_NAME}_fixture conn)
